# Amnesichat

./: Cargo.toml  Dockerfile  README.md  client.py  client_v2.py  client_v2_gui.py  requirements.txt
client/: Cargo.toml  setup_tor_http_proxy.sh
client/src/: amnesichat.rs  gui.rs  main.rs
src/: encryption.rs  main.rs
static/: index.html  main.js  styles.css
