[package]
name = "Amnesichat"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
html-escape = "0.2"
aes = "0.7.5"
block-modes = "0.8.1"
rand = "0.8"
chacha20poly1305 = "0.10"
hex = "0.4"
zeroize = "1.5"
base64 = "0.21.0"
regex = "1.7"
sha2 = "0.10"
