[package]
name = "Amnesichat"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pgp = "0.14.0"
uuid = { version = "1.3", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
regex = "1.7"
anyhow = "1.0"
rand = "0.8"
smallvec = "1.10.0"
lazy_static = "1.4"
rand_chacha = "0.3"
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = "1.5"
base64 = "0.21"
hex = "0.4"
rpassword = "7.3.1"
signal-hook = "0.3"