[package]
name = "Amnesichat"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oqs = "0.10.0"
regex = "1.7"
rand = "0.8.4"
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = "1.5"
base64 = "0.21"
hex = "0.4"
rpassword = "7.3.1"
sha2 = "0.10"
x25519-dalek = "2.0.1"
ed25519-dalek = "2.1.1"
eframe = "0.24.1"